<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/create_appointment_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/create_appointment_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/appointment_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/appointment_title_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/appointment_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/appointment_time_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/appointment_time_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/appointment_time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time" />

    <TextView
        android:id="@+id/appointment_details_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/appointment_details_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/appointment_details_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.28"
        android:ems="10"
        android:inputType="textMultiLine" />


    <TextView
        android:id="@+id/thesaurus_appointment_label"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/thesaurus_appointment_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/thesaurus_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapWords" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/thesaurus_check_button"
            android:text="@string/thesaurus_check_button_label"/>
    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/create_appointment_label" />
</LinearLayout>