<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp"
              android:background="@drawable/b">


    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <TableRow>

            <TextView
                    android:text="@string/from_Label"
                    android:textSize="20sp"/>

            <Spinner
                    android:id="@+id/from_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </TableRow>

        <TextView
                android:id="@+id/from_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp">
        </TextView>

        <TableRow>

            <TextView
                    android:text="@string/to_Label"
                    android:textSize="20sp"/>

            <Spinner
                    android:id="@+id/to_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </TableRow>

        <Button
                android:id="@+id/translation_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblTranslate_Appointment"/>

        <TextView
                android:id="@+id/translated_label"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:textSize="20sp"/>

        <Button
                android:id="@+id/save_translation_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_translation_label"/>

        <Button
                android:id="@+id/manage_languages_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manage_languages_label"/>
    </TableLayout>

</LinearLayout>